# epilepsy

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  epilepsy.code-workspace  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
book/: bibtex.bib  hyperref.sty  krantz.cls  main.tex
book/GitHub/: abstract.txt  detailed_abstract.txt
book/NLP/: nlp.tex
book/chapters/CodingBasics/: coding_basics.tex  intro.tex  (+5 more)
book/frontmatter/: contributor.tex  foreword.tex  preamble.tex
code/: pyproject.toml  run_experiment.sh  train.py
code/CodingBasics/: intro_seizure.R  intro_seizure.py  pyproject.toml
code/CodingBasics/dummy_data/: seizure_data.csv
code/CodingBasics/dummy_data/person_data/personA/: metadata.csv  metadata.json
code/CodingBasics/dummy_data/person_data/personB/: metadata.csv  metadata.json
code/CodingBasics/dummy_data/person_data/personC/: metadata.csv  metadata.json
code/CodingBasics/scripts/: classes.py  hello_world.py
code/CodingBasics/scripts/etl_examples/: 0_load_single_csv.py  1_load_multiple_csvs.py  2_load_multiple_json.py  3_describe_dataframe.py  4_change_datatypes.py  5_merge_dataframes.py  6_apply_functions.py  7_remove_nans.py  8_apply_median_replacement.py  scratch_load_data.py
code/R_chapter/: intro_seizure.R  intro_seizure.py  pyproject.toml
code/config/: config_financial_impact.json  config_financial_impact_small.json
code/data/: financial_impact.py
code/inference/: handler.py
code/notebooks/: financial_impact.py
code_examples/: bert_tokenizer.py
(+32 files in other folders)
