[tool.poetry]
name = "epilepsy"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.8.*"
transformer_classification_framework = { git = "https://github.com/robmsylvester/transformer_classification_framework.git", tag = "0.0.4" }
pytorch-lightning = "1.5.8"
torch = "1.10.2"
boto3 = "^1.21.0"
pandas = "^1.4.1"
sentence-transformers = "^2.2.0"
umap-learn = "^0.5.2"
numba = "0.53"
numpy = "1.21.4"
hdbscan = "^0.8.28"
matplotlib = "^3.5.1"
plotly = "^5.6.0"
nbformat = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core<=1.0.4"]
build-backend = "poetry.core.masonry.api"
